# Finite-Automatons-simulator

./: CMakeLists.txt  Makefile  README.md  main.cpp  tests.py
REParser/: RegEx.g4  RegEx.interp  RegEx.tokens  RegExBaseListener.cpp  RegExBaseListener.h  RegExLexer.cpp  RegExLexer.h  RegExLexer.interp  RegExListener.cpp  RegExListener.h  RegExParser.cpp  RegExParser.h  RegExVisitor.cpp  RegExVisitor.h
Tests/: README.md  reTests.py
include/: DFA.h  DFAStates.h  ENFA.h  NFA.h  cli_parser.h
parser/: RegEx.g4
regExprs/: re1  re2
sample_nfa/: D3AD  always_accepts  automaton3.txt  big_nfa.txt  not_min1  not_min3  not_min4  odd01.txt
src/: DFA.cpp  ENFA.cpp  NFA.cpp  cli_parser.cpp  main.cpp
